Add DOI urls for superseded papers

--- a/bbt.bib
+++ b/bbt.bib
@@ -167,7 +167,7 @@
 
 @unpublished{Chareton2020,
   author        = {Chareton, Christophe and Bardin, S{\'e}bastien and Bobot, Fran{\c c}ois and Perrelle, Valentin and Valiron, Benoit},
-  note          = {Extended version of: An Automated Deductive Verification Framework for Circuit-building Quantum Programs, presented at ESOP 2021},
+  note          = {Extended version of: \href{http://dx.doi.org/10.1007/978-3-030-72019-3_6}{An Automated Deductive Verification Framework for Circuit-building Quantum Programs} presented at ESOP 2021},
   title         = {A {{Deductive Verification Framework}} for {{Circuit}}-Building {{Quantum Programs}}},
   month         = mar,
   year          = {2020},
@@ -418,7 +418,7 @@
 
 @unpublished{Hietala2019,
   author        = {Hietala, Kesha and Rand, Robert and Hung, Shih-Han and Wu, Xiaodi and Hicks, Michael},
-  note          = {Talk at Quantum Physics and Logic, Chapman University, June 2019. Superseded by A Verified Optimizer for Quantum Circuits \href{https://arxiv.org/abs/1912.02250}{arXiv:1912.02250~}},
+  note          = {Talk at Quantum Physics and Logic, Chapman University, June 2019. Superseded by \href{http://dx.doi.org/10.1145/3434318}{A Verified Optimizer for Quantum Circuits}},
   title         = {Verified {{Optimization}} in a {{Quantum Intermediate Representation}}},
   month         = apr,
   year          = {2019},
