Remove URLs with entries with DOIs

--- a/bbt.bib
+++ b/bbt.bib
@@ -477,8 +477,7 @@
   volume    = {45},
   abstract  = {We present ScaffCC, a scalable compilation and analysis framework based on LLVM (Lattner and Adve, 2004), which can be used for compiling quantum computing applications at the logical level. Drawing upon mature compiler technologies, we discuss similarities and differences between compilation of classical and quantum programs, and adapt our methods to optimizing the compilation time and output for the quantum case. Our work also integrates a reversible-logic synthesis tool in the compiler to facilitate coding of quantum circuits. Lastly, we present some useful quantum program analysis scenarios and discuss their implications, specifically with an elaborate discussion of timing analysis for critical path estimation. Our work focuses on bridging the gap between high-level quantum algorithm specifications and low-level physical implementations, while providing good scalability to larger and more interesting problems.},
   doi       = {10.1016/j.parco.2014.12.001},
-  timestamp = {2021-04-18},
-  url       = {https://www.sciencedirect.com/science/article/pii/S0167819114001422}
+  timestamp = {2021-04-18}
 }
 
 @techreport{Knill1996,
@@ -505,8 +504,7 @@
   abstract  = {Ryan LaRose, Quantum 3, 130 (2019). Quantum computers are available to use over the cloud, but the recent explosion of quantum software platforms can be overwhelming for those deciding on which to use. In this paper, we provid\ldots},
   doi       = {10.22331/q-2019-03-25-130},
   publisher = {{Verein zur F\"orderung des Open Access Publizierens in den Quantenwissenschaften}},
-  timestamp = {2021-04-18},
-  url       = {https://quantum-journal.org/papers/q-2019-03-25-130/}
+  timestamp = {2021-04-18}
 }
 
 @inproceedings{Lindenhovius2018,
@@ -737,8 +735,7 @@
   abstract  = {We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a crucial role. Following earlier work on QWire by Paykin et al., we consider both a simple first-order linear language for circuits, and a more powerful host language, such that the circuit language is embedded inside the host language. Our categorical semantics for the host language is standard, and involves cartesian closed categories and monads. We interpret the circuit language not in an ordinary category, but in a category that is enriched in the host category. As an extended example, we recall an earlier result that the category of W*-algebras is dcpo-enriched, and we use this model to extend the circuit language with some recursive types.},
   doi       = {10.1016/j.entcs.2018.03.027},
   series    = {The {{Thirty}}-Third {{Conference}} on the {{Mathematical Foundations}} of {{Programming Semantics}} ({{MFPS XXXIII}})},
-  timestamp = {2021-04-18},
-  url       = {https://www.sciencedirect.com/science/article/pii/S1571066118300306}
+  timestamp = {2021-04-18}
 }
 
 @inproceedings{Rios2018,
@@ -884,8 +881,7 @@
   doi        = {10.22331/q-2018-01-31-49},
   publisher  = {{Verein zur F\"orderung des Open Access Publizierens in den Quantenwissenschaften}},
   shorttitle = {{{ProjectQ}}},
-  timestamp  = {2021-04-18},
-  url        = {https://quantum-journal.org/papers/q-2018-01-31-49/}
+  timestamp  = {2021-04-18}
 }
 
 @inproceedings{Svore2018,
@@ -945,8 +941,7 @@
   volume    = {58},
   doi       = {10.1145/2699415},
   publisher = {{ACM}},
-  timestamp = {2021-04-18},
-  url       = {http://dl.acm.org/citation.cfm?doid=2808213.2699415}
+  timestamp = {2021-04-18}
 }
 
 @misc{Wecker2014,
@@ -1004,8 +999,7 @@
 
   • As indicated by the completeness theorem, the Sharir–Pnueli–Hart method is in principle effective for verifying all properties of quantum programs that can be expressed in terms of Hermitian operators (observables). But it is not feasible for many practical applications because of the complicated calculation involved in the verification. For the case of finite-dimensional state spaces, we find a method for verification of quantum programs much simpler than the Sharir–Pnueli–Hart method by employing the matrix representation of super-operators and Jordan decomposition of matrices. In particular, this method enables us to compute easily the average running time and to analyze some interesting long-run behaviors of quantum programs in a finite-dimensional state space.},
   doi       = {10.1016/j.scico.2013.03.016},
-  timestamp = {2021-04-18},
-  url       = {https://www.sciencedirect.com/science/article/pii/S0167642313000774}
+  timestamp = {2021-04-18}
 }
 
 @misc{Ying2014,
@@ -1028,8 +1022,7 @@
   address   = {{Amsterdam}},
   isbn      = {978-0-12-802306-8},
   doi       = {10.1016/C2014-0-02660-3},
-  timestamp = {2021-04-18},
-  url       = {https://linkinghub.elsevier.com/retrieve/pii/C20140026603}
+  timestamp = {2021-04-18}
 }
 
 @inproceedings{Zhou2019,
